# server/src/main/java/org/openapitools/api/AddressesApi.java
@@ -31,27 +31,27 @@ import java.util.Map;
 import java.util.Optional;
 import javax.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-11-12T21:32:54.191+01:00[Europe/Berlin]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-11-15T21:55:00.089+01:00[Europe/Berlin]")
 @Validated
-@Tag(name = "address", description = "the address API")
-public interface AddressApi {
+@Tag(name = "addresses", description = "the addresses API")
+public interface AddressesApi {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
     /**
-     * GET /address
-     * Get a list of addresses
+     * GET /addresses
+     * Get a list of all addresses
      *
      * @return Success! (status code 200)
      */
     @Operation(
-        operationId = "addressGet",
-        tags = { "address" },
+        operationId = "addressesGet",
+        tags = { "addresses" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Success!", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = Address.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = AddressesInner.class))
             })
         }
     )
@@ -60,7 +60,7 @@ public interface AddressApi {
         value = "/addresses",
         produces = { "application/json" }
     )
-    default ResponseEntity<List<Address>> addressGet(
+    default ResponseEntity<List<AddressesInner>> addressesGet(
         
     ) {
         getRequest().ifPresent(request -> {
@@ -78,24 +78,24 @@ public interface AddressApi {
 
 
     /**
-     * DELETE /address/{id}
+     * DELETE /addresses/{id}
      * Delete Address by ADID
      *
      * @param id  (required)
      * @return Successfully deleted the Address (status code 200)
      */
     @Operation(
-        operationId = "addressIdDelete",
-        tags = { "address" },
+        operationId = "addressesIdDelete",
+        tags = { "addresses" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Successfully deleted the Address")
         }
     )
     @RequestMapping(
         method = RequestMethod.DELETE,
-        value = "/address/{id}"
+        value = "/addresses/{id}"
     )
-    default ResponseEntity<Void> addressIdDelete(
+    default ResponseEntity<Void> addressesIdDelete(
         @Parameter(name = "id", description = "", required = true) @PathVariable("id") Integer id
     ) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
@@ -104,26 +104,26 @@ public interface AddressApi {
 
 
     /**
-     * GET /address/{id}
+     * GET /addresses/{id}
      *
      * @param id  (required)
      * @return Success Response with Path Parameter (status code 200)
      */
     @Operation(
-        operationId = "addressIdGet",
-        tags = { "address" },
+        operationId = "addressesIdGet",
+        tags = { "addresses" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Success Response with Path Parameter", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = AddressesInner.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Address.class))
             })
         }
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/address/{id}",
+        value = "/addresses/{id}",
         produces = { "application/json" }
     )
-    default ResponseEntity<List<AddressesInner>> addressIdGet(
+    default ResponseEntity<Address> addressesIdGet(
         @Parameter(name = "id", description = "", required = true) @PathVariable("id") Integer id
     ) {
         getRequest().ifPresent(request -> {
@@ -141,25 +141,25 @@ public interface AddressApi {
 
 
     /**
-     * PATCH /address/{id}
+     * PATCH /addresses/{id}
      *
      * @param id  (required)
      * @param addressInfo  (optional)
-     * @return Successfully changed data of address with adid: {adid} (status code 200)
+     * @return Successfully changed data of address with id: {id} (status code 200)
      */
     @Operation(
-        operationId = "addressIdPatch",
-        tags = { "address" },
+        operationId = "addressesIdPatch",
+        tags = { "addresses" },
         responses = {
-            @ApiResponse(responseCode = "200", description = "Successfully changed data of address with adid: {adid}")
+            @ApiResponse(responseCode = "200", description = "Successfully changed data of address with id: {id}")
         }
     )
     @RequestMapping(
         method = RequestMethod.PATCH,
-        value = "/address/{id}",
+        value = "/addresses/{id}",
         consumes = { "application/json" }
     )
-    default ResponseEntity<Void> addressIdPatch(
+    default ResponseEntity<Void> addressesIdPatch(
         @Parameter(name = "id", description = "", required = true) @PathVariable("id") Integer id,
         @Parameter(name = "AddressInfo", description = "") @Valid @RequestBody(required = false) AddressInfo addressInfo
     ) {
@@ -169,25 +169,25 @@ public interface AddressApi {
 
 
     /**
-     * POST /address
+     * POST /addresses
      * Add a new Person
      *
      * @param addressInfo  (optional)
      * @return Successfully added (status code 201)
      */
     @Operation(
-        operationId = "addressPost",
-        tags = { "address" },
+        operationId = "addressesPost",
+        tags = { "addresses" },
         responses = {
             @ApiResponse(responseCode = "201", description = "Successfully added")
         }
     )
     @RequestMapping(
         method = RequestMethod.POST,
-        value = "/address",
+        value = "/addresses",
         consumes = { "application/json" }
     )
-    default ResponseEntity<Void> addressPost(
+    default ResponseEntity<Void> addressesPost(
         @Parameter(name = "AddressInfo", description = "") @Valid @RequestBody(required = false) AddressInfo addressInfo
     ) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
